added goals and campaigns

--- a/home/templates/home/change-password.html
+++ b/home/templates/home/change-password.html
@@ -35,7 +35,7 @@
   }
 </style>
 
-<body>
+
   {% if form.errors %}
       <p>Your passwords didn't match. Password change unsuccessful. Please try again.</p>
   {% endif %}
@@ -48,6 +48,7 @@
       {% endif %}
   {% endif %}
   <div class="container my-5">
+    {% bootstrap_messages %}
     <main class="form-signin w-100 m-auto">
       <form method="post" action="{% url 'password_change' %}">
         {% csrf_token %}
@@ -59,11 +60,7 @@
           <li>Re-enter your new password.</li>
         </ol>
         {% bootstrap_form form %}
-        {% buttons %}
-          <button type="submit" class="btn btn-primary">
-            Submit
-          </button>
-        {% endbuttons %}
+        {% bootstrap_button button_type="submit" content="OK" %}
 
         <input type="hidden" name="next" value="{{ next }}">
         
@@ -71,5 +68,5 @@
       </form>
     </main>
   </div>
-</body>
+
 {% endblock %}
