--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -44,17 +44,14 @@
       {% endif %}
   {% endif %}
   <div class="container my-5">
+    {% bootstrap_messages %}
     <main class="form-signin w-100 m-auto">
       <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
         <img class="mb-4" src="{% static 'home/k4.png' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         {% bootstrap_form form %}
-        {% buttons %}
-          <button type="submit" class="btn btn-primary">
-            Submit
-          </button>
-        {% endbuttons %}
+        {% bootstrap_button button_type="submit" content="OK" %}
 
           <input type="hidden" name="next" value="{{ next }}">
 
