--- a/home/templates/home/password_reset_confirm.html
+++ b/home/templates/home/password_reset_confirm.html
@@ -56,6 +56,7 @@
   {% endif %}
 
   <div class="container my-5">
+    {% bootstrap_messages %}
     <main class="form-signin w-100 m-auto">
         <form class="form" method="post">
             {% csrf_token %}
@@ -66,12 +67,8 @@
             <li>Re-enter your new password.</li>
             </ol>
             {% bootstrap_form form %}
-            {% buttons %}
-            <button type="submit" class="btn btn-primary">
-                Submit
-            </button>
-            {% endbuttons %}
-
+            {% bootstrap_button button_type="submit" content="OK" %}
+            
             <input type="hidden" name="next" value="{% url 'password_reset_complete' %}">
 
             <p class="mt-5 mb-3 text-body-secondary"><a href="{% url 'home' %}" class="text-primary">Karmacanix<sup>©</sup></a> 2017–2023</p>
