--- a/home/templates/home/account.html
+++ b/home/templates/home/account.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<body>
+
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2-circle" viewBox="0 0 16 16">
           <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
@@ -15,7 +15,7 @@
             <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
         </symbol>
     </svg>
-    <div class="container my-5">
+    <div class="container">
         <div class="p-5 bg-body-tertiary rounded-3">
             {% if user.is_authenticated %}
                 <h2 class="text-body-emphasis">{{ user.username }}'s account settings page.</h2>
@@ -54,6 +54,6 @@
             {% endif %}
         </div>
     </div>
-</body>
+
 
 {% endblock %}
