--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -20,8 +20,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Leckerli+One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </head>
-
+   
 
 
   <style>
@@ -97,10 +96,9 @@
       z-index: 1500;
     }
   </style>
+  {% block head %}{% endblock %}
+  </head>
   {% include "home/nav.html" %}
-  {# Display django.contrib.messages as Bootstrap alerts #}
-  {% bootstrap_messages %}
   {% block content %}{% endblock %}
   {% include "home/footer.html" %}
-
 </html> 
