--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,12 +1,17 @@
 {% extends "home/base.html" %}
 
 {% load static %}
+{# Load the tag library #}
+{% load bootstrap5 %}
 
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 {% block content %}
 <style>
 .border-dashed { --bs-border-style: dashed; }
 </style>
-<body>
+
   <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="bootstrap" viewBox="0 0 118 94">
         <title>Bootstrap</title>
@@ -20,11 +25,11 @@
         <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
       </symbol>
   </svg>
-    
-
-<div class="container my-5">
-  <div class="p-5 text-center bg-body-tertiary rounded-3">
+  <body>
+  <div class="container">
+    <div class="p-5 text-center bg-body-tertiary rounded-3">
       <img src="{% static 'home/k4.png' %}" alt="Karma Icon" width="100" height="100">
+      {% bootstrap_messages %}
       {% if user.is_authenticated %}
         <h4>Welcome back {{ user.username }}!</h4>
         <br/>
