--- a/home/templates/home/password_reset_form.html
+++ b/home/templates/home/password_reset_form.html
@@ -49,6 +49,7 @@
   {% endif %}
   
   <div class="container my-5">
+    {% bootstrap_messages %}
     <main class="form-signin w-100 m-auto">
       <form method="post" action="{% url 'password_reset' %}">
         {% csrf_token %}
@@ -60,11 +61,7 @@
           <li>Click the link in the email to reset.</li>
         </ol>
         {% bootstrap_form form %}
-        {% buttons %}
-          <button type="submit" class="btn btn-primary">
-            Submit
-          </button>
-        {% endbuttons %}
+        {% bootstrap_button button_type="submit" content="OK" %}
 
         <input type="hidden" name="next" value="{{ next }}">
         <p class="mt-5 mb-3 text-body-secondary"><a href="{% url 'home' %}" class="text-primary">Karmacanix<sup>©</sup></a> 2017–2023</p>
