--- a/home/templates/home/nav.html
+++ b/home/templates/home/nav.html
@@ -5,37 +5,82 @@
 {# Load CSS and JavaScript #}
 {% bootstrap_javascript %}
 
+{% block head %}
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Leckerli+One">
 
-<header class="p-3 text-bg-dark">
-    <div class="container">
+    <style>
+        .animation--fade-titles {
+            color: DodgerBlue;
+            animation-duration: 24s;
+            animation-name: fade-title;
+            animation-delay: 0;
+            animation-iteration-count: infinite;
+            animation-direction: forward;
+        }
+
+        @keyframes fade-title {
+            0%  {color: DodgerBlue;}
+            50% {color: DeepPink;}
+            100% {color: DodgerBlue;}
+        }
+    </style>
+
+{% endblock %}
+
+<header class="container p-3 text">
+    <div class="row">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="{% url 'home' %}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <img src="{% static 'home/k4.png' %}" alt="Karma Icon" width="32" height="32">
+            <a href="{% url 'home' %}">
+                <h3 class="animation--fade-titles" style='font-family: "Leckerli One", serif; color:#0055aa;'>Bang! Bang!</h3>
             </a>
-
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div id="karmactive" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start border-bottom border-primary p-1">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                <li><button class="w3-btn w3-deep-purple w3-padding-small w3-round-large w3-hover-pink active"><a href="{% url 'home' %}" class="nav-link px-2 text-white active" aria-current="page">Home</a></button></li>
+                <li>&nbsp; &nbsp;</li>
+                {% if user.is_authenticated %}
+                    <li><button class="w3-btn w3-purple w3-padding-small w3-round-large w3-hover-green"><a href="#" class="nav-link px-2 text-white">Documents</a></button></li>
+                    <li>&nbsp; &nbsp;</li>
+                    <li><button class="w3-btn w3-purple w3-padding-small w3-round-large w3-hover-green"><a href="#" class="nav-link px-2 text-white">Themes</a></button></li>
+                    <li>&nbsp; &nbsp;</li>
+                    <li><button class="w3-btn w3-purple w3-padding-small w3-round-large w3-hover-green"><a href="#" class="nav-link px-2 text-white">About</a></button></li>
+                {% endif %}
             </ul>
-
             {% if user.is_authenticated %}
-                <div class="dropdown text-end">
-                    <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="{% static 'home/k4.png' %}" alt="dak" width="32" height="32" class="rounded-circle">
-                    </a>
-                    <ul class="dropdown-menu text-small">
-                        <li><a class="dropdown-item" href="{% url 'account_settings' %}">Settings</a></li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
-                    </ul>
-                </div>
+            <div class="dropdown text-end">
+                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fa-solid fa-gear fa-2xl"></i>
+                </a>
+                <ul class="dropdown-menu text-small">
+                    <li><a class="dropdown-item" href="{% url 'account_settings' %}">Settings</a></li>
+                    <li>&nbsp; &nbsp;</li>
+                    <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                </ul>
+            </div>
             {% else %}
-                <div class="text-end">
-                    <a type="button" class="btn btn-primary btn-outline-light me-2" href="{% url 'login' %}">Login</a>
-                    <a href="{% url 'signup' %}" type="button" class="btn btn-warning">Sign-up</a>
-                </div>
+            <div class="text-end">
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><button class="w3-btn w3-blue w3-padding-small w3-round-large w3-hover-pink"><a href="{% url 'login' %}" class="nav-link px-2 text-white">Login</a></button></li>
+                    <li>&nbsp; &nbsp;</li>
+                    <li><button class="w3-btn w3-black w3-padding-small w3-round-large w3-hover-red"><a href="{% url 'signup' %}" class="nav-link px-2 text-white">Sign-up</a></button></li>
+                </ul>
+            </div>
             {% endif %}
         </div>
     </div>
 </header>
+<script>
+    // Add active class to the current button (highlight it)
+    var header = document.getElementById("karmactive");
+    var btns = header.getElementsByClassName("w3-btn");
+    for (var i = 0; i < btns.length; i++) {
+        btns[i].addEventListener("click", function() {
+            var current = document.getElementsByClassName("active");
+            current[0].className = current[0].className.replace(" active", "");
+            this.className += " active";
+        });
+    }
+</script>
