--- a/home/templates/home/password_reset_complete.html
+++ b/home/templates/home/password_reset_complete.html
@@ -4,27 +4,17 @@
 
 {% block content %}
 <body>
-
-<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-    <symbol id="arrow-right-short" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
-    </symbol>
-</svg>
-<div class="container my-5">
-    <div class="p-5 text-center bg-body-tertiary rounded-3">
-        <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">Success!</h4>
-            <hr>
+    <div class="container my-5">
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <h2 class="text-success">Success!</h2>
+            <br/>
             <p>You have successful reset your password.</p>
-            <p class="mb-0">Please login.</p>
-            <hr>
+            <p>Please login.</p>
+            <br/>
+            <button class="w3-btn w3-blue w3-padding-small w3-large w3-round-large w3-hover-pink">
+                <a href="{% url 'login' %}" class="nav-link px-2 text-white active">Login</a>
+            </button>
         </div>
-        <a href="{% url 'login' %}" class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
-            Login
-            <svg class="bi ms-2" width="24" height="24"><use xlink:href="#arrow-right-short"></use></svg>
-        </a>
     </div>
-</div>
-
 </body>
 {% endblock %}
