--- a/home/templates/home/password_reset_confirm.html
+++ b/home/templates/home/password_reset_confirm.html
@@ -36,13 +36,6 @@
 </style>
 <body>
 
-<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-    <symbol id="arrow-right-short" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
-    </symbol>
-</svg>
-
-
 {% if form.errors %}
       <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
@@ -56,11 +49,10 @@
   {% endif %}
 
   <div class="container my-5">
-    <main class="form-signin w-100 m-auto">
+    <main class="form-signin w-100 m-auto border">
         <form class="form" method="post">
             {% csrf_token %}
-            <img class="mb-4" src="{% static 'home/k4.png' %}" alt="" width="72" height="72">
-            <h1 class="h3 mb-3 fw-normal">Set new password</h1>
+            <h2 class="h3 mb-3 fw-normal">Set new password</h2>
             <ol>
             <li>Enter your new password.</li>
             <li>Re-enter your new password.</li>
@@ -71,10 +63,7 @@
                 Submit
             </button>
             {% endbuttons %}
-
             <input type="hidden" name="next" value="{% url 'password_reset_complete' %}">
-
-            <p class="mt-5 mb-3 text-body-secondary"><a href="{% url 'home' %}" class="text-primary">Karmacanix<sup>©</sup></a> 2017–2023</p>
         </form>
     </main>
   </div>
