--- a/home/templates/home/password_reset_done.html
+++ b/home/templates/home/password_reset_done.html
@@ -4,24 +4,15 @@
 
 {% block content %}
 <body>
-
-<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-    <symbol id="arrow-right-short" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
-    </symbol>
-</svg>
-<div class="container my-5">
-    <div class="p-5 text-center bg-body-tertiary rounded-3">
-        <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">Success!</h4>
-            <hr>
+    <div class="container my-5">
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <h2 class="text-success">Success!</h2>
+            <br/>
             <p>A reset password link has been sent to the email address specified.</p>
-            <p class="mb-0">Use the link in the email to reset your password.</p>
-            <hr>
-            <a href="{% url 'home' %}" class="d-inline-flex align-items-center btn btn-info btn-lg px-4 rounded-pill" type="button">Home</a>
+            <p>Use the link in the email to reset your password.</p>
+            <br/>
+            <button class="w3-btn w3-deep-purple w3-padding-small w3-round-large w3-large w3-hover-pink active"><a href="{% url 'home' %}" class="nav-link px-2 text-white active">Home</a></button>
+        </div>
     </div>
-    </div>
-</div>
-
 </body>
 {% endblock %}
