--- a/home/templates/home/change-password.html
+++ b/home/templates/home/change-password.html
@@ -48,10 +48,9 @@
       {% endif %}
   {% endif %}
   <div class="container my-5">
-    <main class="form-signin w-100 m-auto">
+    <main class="form-signin w-100 m-auto border">
       <form method="post" action="{% url 'password_change' %}">
         {% csrf_token %}
-        <img class="mb-4" src="{% static 'home/k4.png' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 fw-normal">Change password</h1>
         <ol>
           <li>Enter your old password.</li>
@@ -64,10 +63,7 @@
             Submit
           </button>
         {% endbuttons %}
-
         <input type="hidden" name="next" value="{{ next }}">
-        
-        <p class="mt-5 mb-3 text-body-secondary"><a href="{% url 'home' %}" class="text-primary">Karmacanix<sup>©</sup></a> 2017–2023</p>
       </form>
     </main>
   </div>
