--- a/home/templates/home/logged_out.html
+++ b/home/templates/home/logged_out.html
@@ -4,30 +4,20 @@
 
 {% block content %}
 <body>
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-        <symbol id="arrow-right-short" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
-        </symbol>
-        <symbol id="house-home" viewBox="0 0 24 24" width="24" height="24">
-        <path d="M11.03 2.59a1.501 1.501 0 0 1 1.94 0l7.5 6.363a1.5 1.5 0 0 1 .53 1.144V19.5a1.5 1.5 0 0 1-1.5 1.5h-5.75a.75.75 0 0 1-.75-.75V14h-2v6.25a.75.75 0 0 1-.75.75H4.5A1.5 1.5 0 0 1 3 19.5v-9.403c0-.44.194-.859.53-1.144ZM12 3.734l-7.5 6.363V19.5h5v-6.25a.75.75 0 0 1 .75-.75h3.5a.75.75 0 0 1 .75.75v6.25h5v-9.403Z"></path>
-        </symbol>
-    </svg>
     <div class="container my-5">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <div class="alert alert-success" role="alert">
-                <h4 class="alert-heading">Success!</h4>
-            </div>
+            <h2 class="text-success">Success!</h2>
             <p>You have successfully logged out.</p>
             <p>Log back in or return to the home page.</p>
             <br/>
-            <a href="{% url 'login' %}" class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
-                Login
-                <svg class="bi ms-2" width="24" height="24"><use xlink:href="#arrow-right-short"></use></svg>
-            </a>
-            <a href="{% url 'home' %}" class="d-inline-flex align-items-center btn btn-secondary btn-lg px-4 rounded-pill" type="button">
-                Home
-                <svg class="bi ms-2" width="24" height="24"><use xlink:href="#house-home"></use></svg>
-            </a>
+            <button class="w3-btn w3-blue w3-padding-small w3-large w3-round-large w3-hover-pink">
+                <a href="{% url 'login' %}" class="nav-link px-2 text-white">Login</a>
+            </button>
+            &nbsp; &nbsp;
+            <button class="w3-btn w3-deep-purple w3-padding-small w3-large w3-round-large w3-hover-pink">
+                <a href="{% url 'home' %}" class="nav-link px-2 text-white">Home</a>
+            </button>
+            <br/>
         </div>
     </div>
 </body>
