--- a/home/templates/home/password_change_done.html
+++ b/home/templates/home/password_change_done.html
@@ -13,14 +13,11 @@
 
 <div class="container my-5">
     <div class="p-5 text-center bg-body-tertiary rounded-3">
-        <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">Success!</h4>
-            <hr>
-            <p>You have updated your password.</p>
-            <p class="mb-0">Use your new password next time you login.</p>
-            <hr>
-        </div>  
-        <a href="{% url 'home' %}" class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">Home</a>
+        <h4 class="text-success">Success!</h4>
+        <p>You have updated your password.</p>
+        <p class="mb-0">Use your new password next time you login.</p>
+        <br/>
+        <button class="w3-btn w3-deep-purple w3-padding-small w3-xlarge w3-round-large w3-hover-pink"><a href="{% url 'home' %}" class="nav-link px-2 text-white active" aria-current="page">Home</a></button></li>
     </div>
 </div>
 
