--- a/home/templates/home/password_reset_form.html
+++ b/home/templates/home/password_reset_form.html
@@ -49,10 +49,9 @@
   {% endif %}
   
   <div class="container my-5">
-    <main class="form-signin w-100 m-auto">
+    <main class="form-signin w-100 m-auto border">
       <form method="post" action="{% url 'password_reset' %}">
         {% csrf_token %}
-        <img class="mb-4" src="{% static 'home/k4.png' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 fw-normal">Reset password</h1>
         <ol>
           <li>Enter your email address.</li>
@@ -65,9 +64,7 @@
             Submit
           </button>
         {% endbuttons %}
-
         <input type="hidden" name="next" value="{{ next }}">
-        <p class="mt-5 mb-3 text-body-secondary"><a href="{% url 'home' %}" class="text-primary">Karmacanix<sup>©</sup></a> 2017–2023</p>
       </form>
     </main>
   </div>
