--- a/home/templates/home/change-password.html
+++ b/home/templates/home/change-password.html
@@ -1,44 +1,9 @@
 {% extends "home/base.html" %}
 {% load static %}
-{# Load the tag library #}
 {% load bootstrap5 %}
-
-{# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 {% block content %}
-<style>
-  html,
-  body {
-    height: 100%;
-  }
-
-  .form-signin {
-    max-width: 420px;
-    padding: 1rem;
-  }
-
-  .form-signin .form-floating:focus-within {
-    z-index: 2;
-  }
-
-  .form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-
-  .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  }
-</style>
-
-
-  {% if form.errors %}
-      <p>Your passwords didn't match. Password change unsuccessful. Please try again.</p>
-  {% endif %}
 
   {% if next %}
       {% if user.is_authenticated %}
@@ -48,14 +13,17 @@
       {% endif %}
   {% endif %}
   <div class="container my-5">
-    <main class="form-signin w-100 m-auto border">
+    <main class="form-signin w-100 m-auto border bg-body-tertiary rounded-3">
       <form method="post" action="{% url 'password_change' %}">
         {% csrf_token %}
-        <h1 class="h3 mb-3 fw-normal">Change password</h1>
+        <h2 class="h3 mb-3 fw-normal">Change password</h2>
+        {% if messages %}
+          {% bootstrap_messages %}
+        {% endif %}
         <ol>
-          <li>Enter your old password.</li>
-          <li>Enter your new password.</li>
-          <li>Re-enter your new password.</li>
+          <li><small>Enter your old password.</small></li>
+          <li><small>Enter your new password.</small></li>
+          <li><small>Re-enter your new password.</small></li>
         </ol>
         {% bootstrap_form form %}
         {% buttons %}
