--- a/home/templates/home/password_change_done.html
+++ b/home/templates/home/password_change_done.html
@@ -1,23 +1,20 @@
 {% extends "home/base.html" %}
 
 {% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
 {% block content %}
 <body>
 
-<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-    <symbol id="arrow-right-short" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
-    </symbol>
-</svg>
-
 <div class="container my-5">
     <div class="p-5 text-center bg-body-tertiary rounded-3">
-        <h4 class="text-success">Success!</h4>
-        <p>You have updated your password.</p>
-        <p class="mb-0">Use your new password next time you login.</p>
-        <br/>
-        <button class="w3-btn w3-deep-purple w3-padding-small w3-xlarge w3-round-large w3-hover-pink"><a href="{% url 'home' %}" class="nav-link px-2 text-white active" aria-current="page">Home</a></button></li>
+        <h2 class="w3-jumbo text-success">Success!</h2>
+        {% if messages %}
+            {% bootstrap_messages %}
+        {% endif %}
+        <p>Your password has changed.</p>
     </div>
 </div>
 
