--- a/home/templates/home/password_reset_done.html
+++ b/home/templates/home/password_reset_done.html
@@ -1,18 +1,19 @@
 {% extends "home/base.html" %}
 
 {% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
 {% block content %}
 <body>
     <div class="container my-5">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <h2 class="text-success">Success!</h2>
-            <br/>
-            <p>A reset password link has been sent to the email address specified.</p>
-            <p>Use the link in the email to reset your password.</p>
-            <br/>
-            <button class="w3-btn w3-deep-purple w3-padding-small w3-round-large w3-large w3-hover-pink active"><a href="{% url 'home' %}" class="nav-link px-2 text-white active">Home</a></button>
-        </div>
+            <h2 class="w3-jumbo text-success">Success!</h2>
+            {% if messages %}
+                {% bootstrap_messages %}
+            {% endif %}
+            <p>A reset password link has been emailed.</p>
     </div>
 </body>
 {% endblock %}
