--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -9,25 +9,22 @@
 {% bootstrap_javascript %}
 {% block content %}
 <style>
-.border-dashed { --bs-border-style: dashed; }
+  .border-dashed { --bs-border-style: dashed; }
 </style>
 <body>
-<div class="container my-5">
-  <div class="p-5 text-center bg-body-tertiary rounded-3">
-    <img src="{% static 'home/k4.png' %}" alt="Karma Icon" width="100" height="100">
-    {% if user.is_authenticated %}
-      <h1 class="w3-jumbo">Welcome back {{ user.username }}!</h1>
-      <br/>
-    {% else %}  
-      <h1 class="w3-jumbo">Welcome!</h1>
-      <br/>
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><button class="w3-btn w3-blue w3-large w3-padding-small w3-round-large w3-hover-pink"><a href="{% url 'login' %}" class="nav-link px-2 text-white">Login</a></button></li>
-        <li>&nbsp; &nbsp;</li>
-        <li><button class="w3-btn w3-black w3-large w3-padding-small w3-round-large w3-hover-red"><a href="{% url 'signup' %}" class="nav-link px-2 text-white">Sign-up</a></button></li>
-      </ul>
-    {% endif %}
+  <div class="container my-5">
+    <div class="p-5 text-center bg-body-tertiary rounded-3">
+      {% if messages %}
+        {% bootstrap_messages %}
+      {% endif %}
+      <img src="{% static 'home/k4.png' %}" alt="Karma Icon" width="100" height="100">
+      {% if user.is_authenticated %}
+        <h1 class="w3-jumbo">Welcome back {{ un }}!</h1>
+        <br/>
+      {% else %}  
+        <h1 class="w3-jumbo">Welcome!</h1>
+      {% endif %}
+    </div>
   </div>
-</div>
 </body>
 {% endblock %}
