--- a/home/templates/home/password_reset_complete.html
+++ b/home/templates/home/password_reset_complete.html
@@ -1,19 +1,19 @@
 {% extends "home/base.html" %}
 
 {% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
 {% block content %}
 <body>
     <div class="container my-5">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <h2 class="text-success">Success!</h2>
-            <br/>
-            <p>You have successful reset your password.</p>
-            <p>Please login.</p>
-            <br/>
-            <button class="w3-btn w3-blue w3-padding-small w3-large w3-round-large w3-hover-pink">
-                <a href="{% url 'login' %}" class="nav-link px-2 text-white active">Login</a>
-            </button>
+            <h2 class="w3-jumbo text-success">Success!</h2>
+            {% if messages %}
+                {% bootstrap_messages %}
+            {% endif %}
+            <p>Your password has changed.</p>
         </div>
     </div>
 </body>
