--- a/home/templates/home/password_reset_confirm.html
+++ b/home/templates/home/password_reset_confirm.html
@@ -1,45 +1,11 @@
 {% extends "home/base.html" %}
 {% load static %}
-{# Load the tag library #}
 {% load bootstrap5 %}
-
-{# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 {% block content %}
-<style>
-  html,
-  body {
-    height: 100%;
-  }
 
-  .form-signin {
-    max-width: 420px;
-    padding: 1rem;
-  }
-
-  .form-signin .form-floating:focus-within {
-    z-index: 2;
-  }
-
-  .form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-
-  .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  }
-</style>
 <body>
-
-{% if form.errors %}
-      <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-
   {% if next %}
       {% if user.is_authenticated %}
           <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
@@ -49,14 +15,16 @@
   {% endif %}
 
   <div class="container my-5">
-    {% bootstrap_messages %}
-    <main class="form-signin w-100 m-auto border">
+    <main class="form-signin w-100 m-auto border bg-body-tertiary rounded-3">
         <form class="form" method="post">
             {% csrf_token %}
             <h2 class="h3 mb-3 fw-normal">Set new password</h2>
+            {% if messages %}
+              {% bootstrap_messages %}
+            {% endif %}
             <ol>
-            <li>Enter your new password.</li>
-            <li>Re-enter your new password.</li>
+            <li><small>Enter your new password.</small></li>
+            <li><small>Re-enter your new password.</small></li>
             </ol>
             {% bootstrap_form form %}
             {% buttons %}
