--- a/catalogue/templates/catalogue/catalog_services.html
+++ b/catalogue/templates/catalogue/catalog_services.html
@@ -51,7 +51,7 @@
 
 </body>
   <div class="container bg-body-tertiary rounded-3 my-3 p-1" data-bs-theme="dark">    
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-md-left">
     <div class="col-md-auto">
     <div class="flex-shrink-0 p-3 bg-dark border rounded-3 my-2" style="width: 280px;">
       <h3>
@@ -61,7 +61,7 @@
         </a>
       </h3>
       <ul class="my-3">
-        {% recursetree catalog_list %}
+        {% recursetree catalog_items_with_services %}
         <li class="my-2">
           <a href="{% url 'show_services' node.id %}"> {{ node.name }}</a>
           {% if not node.is_leaf_node %}
@@ -75,27 +75,44 @@
     </div>
   </div>
   <div class="col-md-auto">
-    <div class="flex-shrink-0 p-3 border rounded-3 my-2" style="width: 560px;">
-      <div class="row">
-        <h3>Services available for {{ services_for_catalog_item }}</h3>
-      </div>
-      <div class="row">
-        {% for service in services %}
-          {% if forloop.counter0|divisibleby:"3" %}
-            <div class="w-100"></div>
-          {% endif %}
-          <div class="col-3">
-            <div class="card">
-              <p>{{ service.name }}</p>
-              <p>{{ service.cost }}</p>
-              <button class="w3-btn w3-small w3-deep-purple w3-padding-small w3-round-large w3-hover-pink">
-                <a href="#">+Cart</a>
-              </button>
+    {% if services %}
+      <div class="flex-shrink-0 p-3 border rounded-3 my-2" style="width: 560px;">
+        <div class="row">
+          <h3>Services available for {{ services_for_catalog_item }}</h3>
+        </div>
+        <div class="row">
+          {% for service in services %}
+            {% if forloop.counter0|divisibleby:"3" %}
+              <div class="w-100"></div>
+            {% endif %}
+            <div class="col-3">
+              <div class="card">
+                <p>{{ service.name }}</p>
+                <p>{{ service.cost }}</p>
+                {% if user.is_authenticated %}
+                  <button class="w3-btn w3-small w3-deep-purple w3-padding-small w3-round-large w3-hover-pink">
+                    <a href="{% url 'add_to_cart' service.id %}"><i class="fa-solid fa-cart-plus"></i> Cart</a>
+                  </button>
+                {% else %}
+                  <button class="w3-btn w3-small w3-blue w3-padding-small w3-round-large w3-hover-pink">
+                    <a href="{% url 'login' %}" class="text-white">login to add</a>
+                  </button>
+                {% endif %}
+              </div>
             </div>
-          </div>
-        {% endfor %}
-      </div> 
+          {% endfor %}
+        </div> 
+      </div>
+    {% else %}
+    <div class="flex-shrink-0 p-3 rounded-3 my-2" style="width: 560px;">
+      {% if user.is_authenticated %}
+        <h1>Welcome back {{ user }}!</h1>
+        <br/>
+      {% else %}  
+        <h1>Welcome!</h1>
+      {% endif %}
     </div>
+    {% endif %}
   </div>
 </div>
   </div>
