--- a/home/templates/home/nav.html
+++ b/home/templates/home/nav.html
@@ -19,6 +19,8 @@
             50% {color: DeepPink;}
             100% {color: DodgerBlue;}
         }
+
+        .calendar-text { margin-top: .3em; }
     </style>
 
 {% endblock %}
@@ -35,27 +37,58 @@
     <div class="row">
         <div id="karmactive" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start p-1">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><button class="w3-btn w3-deep-purple w3-padding-small w3-round-large w3-hover-pink active"><a href="{% url 'home' %}" class="nav-link px-2 text-white active" aria-current="page">Home</a></button></li>
+                <li>
+                    <button class="w3-btn w3-deep-purple w3-padding-small w3-round-large w3-hover-pink active">
+                        <a href="{% url 'home' %}" class="nav-link px-2 text-white active" aria-current="page">Home</a>
+                    </button>
+                </li>
                 <li>&nbsp; &nbsp;</li>
-                {% if user.is_authenticated %}
-                    <li><button class="w3-btn w3-purple w3-padding-small w3-round-large w3-hover-green"><a href="{% url 'show_catalog' %}" class="nav-link px-2 text-white">Maintain Catalogue</a></button></li>
-                    <li>&nbsp; &nbsp;</li>
-                    <li><button class="w3-btn w3-purple w3-padding-small w3-round-large w3-hover-green"><a href="{% url 'show_sidebar' %}" class="nav-link px-2 text-white">Sidebar</a></button></li>
-                    <li>&nbsp; &nbsp;</li>
-                    {% if user.is_superuser %}
-                        <li><button class="w3-btn w3-purple w3-padding-small w3-round-large w3-hover-green"><a href="{% url 'admin:index' %}" class="nav-link px-2 text-white">Django Admin</a></button></li>
-                    {% endif %}
-                {% endif %}
+                <li>
+                    <button class="w3-btn w3-purple w3-padding-small w3-round-large w3-hover-green">
+                        <a href="{% url 'show_sidebar' %}" class="nav-link px-2 text-white">Catalog</a>
+                    </button>
+                </li>
+                <li>&nbsp; &nbsp;</li>
             </ul>
             {% if user.is_authenticated %}
-            <div class="dropdown text-end">
-                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-gear fa-2xl"></i>
-                </a>
-                <ul class="dropdown-menu text-small">
-                    <li><a class="dropdown-item" href="{% url 'account_settings' %}">Settings</a></li>
+            <div class="text-end">
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    {% if qs %}
+                    <li>
+                        <div class="dropdown">
+                            <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="fa-stack">
+                                    <i class="fa-regular fa-circle fa-stack-2x"></i>
+                                    <i class="fa-solid fa-flag fa-stack-1x"></i>
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu text-small">
+                                <li><a class="dropdown-item" href="#">item 1</a></li>
+                                <li><a class="dropdown-item" href="#">item 2</a></li>
+                            </ul>
+                        </div>
+                    </li>
                     <li>&nbsp; &nbsp;</li>
-                    <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                    {% endif %}
+                    <li>
+                        <div class="dropdown">
+                            <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="fa-stack">
+                                    <i class="fa-solid fa-gear fa-2xl"></i>
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu text-small">
+                                <li><a class="dropdown-item" href="{% url 'account_settings' %}">Settings</a></li>
+                                <li>&nbsp;</li>
+                                {% if user.is_superuser %}
+                                    <li><a class="dropdown-item" href="{% url 'show_catalog' %}">Catalog</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
+                                    <li>&nbsp;</li>
+                                {% endif %}
+                                <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
             {% else %}
