--- a/catalogue/templates/catalogue/catalog_services.html
+++ b/catalogue/templates/catalogue/catalog_services.html
@@ -106,7 +106,7 @@
     {% else %}
     <div class="flex-shrink-0 p-3 rounded-3 my-2" style="width: 560px;">
       {% if user.is_authenticated %}
-        <h1>Welcome back {{ user }}!</h1>
+        <h1>Welcome back {{ un }}!</h1>
         <br/>
       {% else %}  
         <h1>Welcome!</h1>
