--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -18,7 +18,7 @@
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
     <div class="col-md-4 d-flex align-items-center">
-      <a href="{% url 'home' %}" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+      <a href="{% url 'show_sidebar' %}" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <img src="{% static 'home/k4.png' %}" alt="Karma Icon" width="24" height="24">
       
       <span class="mb-3 mb-md-0 text-body-secondary"><span class="text-primary">Karmacanix<sup>©</sup></span></a> 2023 Company, Inc</span>
